fix text selection and max speed

--- a/widget/css/main.css
+++ b/widget/css/main.css
@@ -6,6 +6,7 @@ body{
     /*overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     */
+    user-select: none;
     color:white;
     background-color: black;
     font-family: Verdana;
